--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1043,7 +1043,9 @@ textarea:focus::-webkit-input-placeholder {
 }
 
 .hero-area-bg-2 {
-	/*background-image: url(../img/smartbackground.png); */
+	background-image: url(../img/pixelsbackground3.png); 
+	background-color: #ffffff;
+	color: #ffffff;
 }
 
 #home2 .single-slide-item {
@@ -1065,7 +1067,7 @@ textarea:focus::-webkit-input-placeholder {
 .single-slide-item {
 	background-size: cover;
 	background-position: center;
-	background-color: #ddd;
+
 	color: #fff;
 	width: 100%;
 	height: 600px;
@@ -1168,7 +1170,7 @@ textarea:focus::-webkit-input-placeholder {
 	padding-left: 35px;
 }
 
-.info-content-area .section-title h2:before {
+/*.info-content-area .section-title h2:before {
 	position: absolute;
 	content: " ";
 	top: 0;
@@ -1176,7 +1178,7 @@ textarea:focus::-webkit-input-placeholder {
 	width: 100%;
 	height: 100%;
 	border-left: 5px solid #F35C27;
-}
+} */
 
 .info-content-area p.highlight {
 	position: relative;
