--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1408,11 +1408,10 @@ single-service-area.active {
 ============== */
 
 .achievement-area {
-	background-image: url(../img/achievement.jpg);
+	background-image: url(../img/pixelsbpix.png);
 	height: 300px;
 	background-size: cover;
 	background-position: center;
-	background-attachment: fixed;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -1464,7 +1463,8 @@ single-service-area.active {
 ============== */
 
 .project-bg {
-	background-image: url(../img/project/project-1-1.jpg);
+	background-image: url(../img/ouxee.png);
+	background-color: #006fff;
 }
 
 .project-bg-2 {
