first completar jeffer

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2015,7 +2015,7 @@ p.blog-meta i:before {
 
 .footer-bottom {
 	padding: 15px 0;
-	background: #061129;
+	background: #0070ff;
 }
 
 .footer-bottom p {
